--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "pino": "^9.4.0",
     "reflect-metadata": "^0.2.2",
     "request-ip": "^3.3.0",
-    "sanitize-html": "^2.13.1"
+    "sanitize-html": "^2.13.1",
+    "sharp": "^0.33.5"
   }
 }
