--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/express-status-monitor": "^1.3.3",
     "@types/jest": "^29.5.13",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/multer": "^1.4.12",
@@ -56,6 +57,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "express-status-monitor": "^1.3.4",
     "jsonwebtoken": "^9.0.2",
     "minio": "^8.0.2",
     "multer": "^1.4.5-lts.1",
