--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     restart: always
     environment:
       POSTGRES_PASSWORD: secret
-      POSTGRES_DB: fmm
+      POSTGRES_DB: theindiegrid
     ports:
       - "5432:5432"
     networks:
@@ -12,26 +12,10 @@ services:
     volumes:
       - db-data:/var/lib/postgresql/data
 
-  minio:
-    image: minio/minio:RELEASE.2023-07-21T21-12-44Z
-    command: server /data --console-address ":9001"
-    environment:
-      MINIO_ROOT_USER: minioadmin
-      MINIO_ROOT_PASSWORD: minioadmin
-    ports:
-      - "9000:9000"
-      - "9001:9001"
-    networks:
-      - fmm-local
-    volumes:
-      - minio-data:/data
-
 networks:
   fmm-local:
     driver: bridge
 
 volumes:
   db-data:
-    driver: local
-  minio-data:
     driver: local
